<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableRow
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/editText_lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_lat"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/editText_lon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_lon"
            android:inputType="numberDecimal"/>
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_name" />

        <EditText
            android:id="@+id/editText_opt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/add_opt" />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonSetData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_add_data" />
    </TableRow>
    <TableRow></TableRow>
</TableLayout>